[gd_scene load_steps=7 format=3 uid="uid://bxy8q6oqxncvx"]

[ext_resource type="Script" uid="uid://nrayoopf82ir" path="res://Scripts/audio_manager.gd" id="1_4tj6f"]
[ext_resource type="AudioStream" uid="uid://ritefndjqwxj" path="res://Assets/Music/The-Creeping-Blob_Looping.mp3" id="2_qixve"]
[ext_resource type="AudioStream" uid="uid://b0fue74e5qra" path="res://Assets/Sfx/computer-processing-sound-effect-01-122131.mp3" id="3_hhwve"]
[ext_resource type="AudioStream" uid="uid://civn07b4fhd4t" path="res://Assets/Music/More-Introspective-Machines_Looping.mp3" id="4_qixve"]
[ext_resource type="AudioStream" uid="uid://bdlcq0byhfb8i" path="res://Assets/Music/The-Winner.mp3" id="5_0hehx"]
[ext_resource type="AudioStream" uid="uid://dqpise41sb6sn" path="res://Assets/Music/A-Long-Journey-for-a-Little-Bot.mp3" id="6_mjqhu"]

[node name="AudioManager" type="Node2D"]
process_mode = 3
script = ExtResource("1_4tj6f")

[node name="MainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qixve")
bus = &"Music"

[node name="ComputerSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hhwve")
bus = &"Sfx"

[node name="MainLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qixve")
bus = &"Music"

[node name="WinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0hehx")
bus = &"Music"

[node name="LightsOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mjqhu")
